--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Forty
 subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
+email: 1214186853@qq.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/jekyll_demo" # the subpath of your site, e.g. /blog
 url: "https://littleboy96.github.io" # the base hostname & protocol for your site
