--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Forty
-subtitle: by HTML5 UP
+title: us
+subtitle: for memory
 email: 1214186853@qq.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/jekyll_demo" # the subpath of your site, e.g. /blog
