--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: us
 subtitle: for memory
 email: 1214186853@qq.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: This is just a simple blog for us.<br /> a witness of every day we have been passed together.
 baseurl: "/jekyll_demo" # the subpath of your site, e.g. /blog
 url: "https://littleboy96.github.io" # the base hostname & protocol for your site
 author:
